First commited as before_46559_rev1